--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "^13.3.2",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-hook-form": "^7.60.0",
     "react-native": "0.79.5",
