--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "expo-font": "^13.3.2",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
+    "i18next": "^25.3.2",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^15.6.1",
     "react-native": "0.79.5",
+    "react-native-actions-sheet": "^0.9.7",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
