--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
@@ -31,8 +32,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-size-matters": "^0.4.2",
     "react-redux": "^9.2.0",
-    "yup": "^1.6.1",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
