--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "expo": "~53.0.17",
     "expo-font": "^13.3.2",
+    "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "i18next": "^25.3.2",
